Add a script to check for the sysex issue